--- a/UMessaGe/app/src/main/res/values/strings.xml
+++ b/UMessaGe/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
     <string name="app_name">UMessaGe</string>
     <string name="background">background</string>
     <string name="password">Contraseña</string>
+    <string name="confirm_password">Confirmar Contraseña</string>
     <string name="email">Correo Electronico</string>
     <string name="login">Iniciar Sesion</string>
     <string name="login_opc">Ingresar</string>
     <string name="registrarse_opc">Registrarse</string>
+    <string name="register_acount">¿No tienes una cuenta? Regístrate</string>
 </resources>
